maybe lazy loading could work?

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="content">
                         <a href="#" target="_blank">
                             <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/p1.jpg">
+                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/p1.jpg" loading="lazy">
                             <div class="content-details fadeIn-bottom">
                                 <a class="head-btn btn text-uppercase" href="#donate">Donate Now</a>
                             </div>
@@ -148,7 +148,7 @@
                     <div class="content">
                         <a href="#" target="_blank">
                             <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/p2.jpg">
+                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/p2.jpg" loading="lazy">
                             <div class="content-details fadeIn-bottom">
                                 <a class="head-btn btn text-uppercase" href="#donate">Donate Now</a>
                             </div>
@@ -167,7 +167,7 @@
                     <div class="content">
                         <a href="#" target="_blank">
                             <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/p3.jpg">
+                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/p3.jpg" loading="lazy">
                             <div class="content-details fadeIn-bottom">
                                 <a class="head-btn btn text-uppercase" href="#donate">Donate Now</a>
                             </div>
@@ -253,7 +253,7 @@
                 <div class="force-scroll not-mobile">
                     <iframe frameborder="0" name="donorbox" scrolling="no" seamless="seamless"
                             src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true"
-                            style="width: 100%; max-width:500px; min-width:310px; max-height: none !important"></iframe>
+                            style="width: 100%; max-width:500px; min-width:310px; max-height: none !important" loading="lazy"></iframe>
                 </div>
             </div>
             <div class="col-lg-6 contact-right">
@@ -263,11 +263,11 @@
                         style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
                 <p class="payment-method">
                     We Accept : <img alt="Visa, Mastercard, American Express, Discover" height="29"
-                                     src="img/payment-sm.png">
+                                     src="img/payment-sm.png" loading="lazy">
                 </p>
                 <div class="force-scroll only-mobile">
                     <iframe frameborder="0" name="donorbox" scrolling="no" seamless="seamless"
-                            src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true"
+                            src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true" loading="lazy"
                             style="width: 100%; max-width:500px; min-width:310px; max-height: none !important"></iframe>
                 </div>
             </div>
