about to test responsive images

--- a/index.html
+++ b/index.html
@@ -266,7 +266,14 @@
     <div class="container-fluid">
         <div class="row d-flex justify-content-end align-items-center">
             <div class="col-lg-6 col-md-12 about-left no-padding">
-                <img alt="" class="img-fluid" src="img/about-img.jpg">
+                <img alt="" class="img-fluid" src="img/s-about-img.jpg">
+<!--                <picture>-->
+<!--                    <source media="(min-width: 768px)"-->
+<!--                            srcset="https://pixboost.com/api/2/img/https://fuhsdgives.org/img/s-about-img.jpg/resize?size=768&auth=MTcwNDcxNzM2NQ__">-->
+<!--                    <source media="(max-width: 576px)"-->
+<!--                            srcset="https://pixboost.com/api/2/img/https://fuhsdgives.org/img/s-about-img.jpg/resize?size=576&auth=MTcwNDcxNzM2NQ__">-->
+<!--                    <img src="img/s-about-img.jpg">-->
+<!--                </picture>-->
             </div>
             <div class="col-lg-6 col-md-12 about-right">
                 <h1>Together, We Can <br>
@@ -330,7 +337,7 @@
                 <div class="force-scroll not-mobile">
                     <iframe frameborder="0" loading="lazy" name="donorbox" scrolling="no"
                             seamless="seamless"
-                            src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true"
+                            src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true" title="donor wall for website"
                             style="width: 100%; max-width:500px; min-width:310px; max-height: none !important"></iframe>
                 </div>
             </div>
@@ -340,7 +347,7 @@
                         scrolling="no" seamless="seamless"
                         src="https://donorbox.org/embed/fuhsdgives"
                         style="max-width: 500px; min-width: 310px; max-height:none!important"
-                        width="100%"></iframe>
+                        width="100%" title="donation form"></iframe>
                 <p class="payment-method">
                     We Accept : <img alt="Visa, Mastercard, American Express, Discover" height="29"
                                      loading="lazy" src="img/payment-sm.png">
@@ -348,7 +355,7 @@
                 <div class="force-scroll only-mobile">
                     <iframe frameborder="0" loading="lazy" name="donorbox" scrolling="no"
                             seamless="seamless" src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true"
-                            style="width: 100%; max-width:500px; min-width:310px; max-height: none !important"></iframe>
+                            style="width: 100%; max-width:500px; min-width:310px; max-height: none !important" title="mobile donor wall widhet"></iframe>
                 </div>
             </div>
         </div>
