--- a/index.html
+++ b/index.html
@@ -148,11 +148,7 @@
 <!--End Modal templates-->
 
 <!-- start banner Area -->
-<section class="banner-area relative" data-lg="resize?size=1520" data-url="https://fuhsdgives.org/img/header-bg.jpg"
-         data-md="resize?size=980"
-         data-pb-background
-         data-sm="resize?size=640"
-         id="home">
+<section class="banner-area relative" id="home">
     <div class="overlay overlay-bg"></div>
     <div class="container">
         <div class="row align-items-center justify-content-start">
@@ -442,11 +438,6 @@
     </div>
 </footer>
 <!-- End footer Area -->
-<script data-api-key="MTcwNDcxNzM2NQ__"
-        data-autoload=""
-        id="pb-script"
-        src="js/vendor/pixboost.bundle.min.js"
-        type="text/javascript"></script>
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 
 <script crossorigin="anonymous"
