moved home anchor

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 <!--End Modal templates-->
 
 <!-- start banner Area -->
-<section class="banner-area relative" id="home">
+<div id="home" style="position: absolute; top: 0"></div>
+<section class="banner-area relative">
     <div class="overlay overlay-bg"></div>
     <div class="container">
         <div class="row align-items-center justify-content-start">
